--- a/css/stylesSuperHero.css
+++ b/css/stylesSuperHero.css
@@ -29,6 +29,9 @@ header {
     margin: 0px;
     background: #00669F;
     box-shadow: 0px 10px 7px rgba(0, 0, 0, 0.25);
+    position: sticky;
+    top: 1px;
+    position: -webkit-sticky;
 }
 
 .title {
