--- a/css/stylesSuperHero.css
+++ b/css/stylesSuperHero.css
@@ -12,6 +12,10 @@ aside {
     background: #1CD1B0;
 }
 
+.hero {
+    margin: auto;
+}
+
 .descuento {
     width: 40%;
     height: 100%;
@@ -62,9 +66,9 @@ header {
 }
 
 section {
-    width: 35%;
+    width: 500px;
     height: 900px;
-    margin: 2% 0 5% 30%;
+    margin: 2% 0 5% 0;
     background: #F3F3F3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-top-right-radius: 50px;
@@ -74,6 +78,7 @@ section {
 .cabecera {
     width: 100%;
     height: 45%;
+    margin-top: 5%;
     border-top-right-radius: 50px;
     border-top-left-radius: 50px;
 }
@@ -147,7 +152,7 @@ svg {
 }
 
 footer {
-    /* height: 35%; */
+    margin-top: 5%;
     width: 100%;
     background: #00669F;
     display: flex;
