--- a/css/addsuper.css
+++ b/css/addsuper.css
@@ -60,12 +60,11 @@ main{
 
 section {
     width: 100%;
-    display: flex;
+    display: inline-block;
     justify-content: center;
 }
 
 article {
-    position: relative;
     border-radius: 16px 16px 0px 0px;
     width: 300px;
     background: #F3F3F3;
