--- a/css/style._enclase.css
+++ b/css/style._enclase.css
@@ -47,11 +47,21 @@ nav ul li a{
   text-decoration: none;
 }
 
-nav ul li a:before{
-  content:'';
-  background: var(--decoration-color);
-  position:absolute;
-  bottom:-10px; 
+nav ul li a::before{
+    content:'';
+    background: var(--decoration-color);
+    position:absolute;
+    bottom:-10px; 
+    height: 5px;
+    width: 0px;
+    transition: ease .4s;
+}
+
+nav ul li a:hover::before{
+    background-color: var(--decoration-color);
+    width: 100%;
+    height: 5px;
+    transition: ease-in 0.4s;
 }
 
 
@@ -72,6 +82,14 @@ nav ul li a:before{
     background: var(--primary-color);
     padding: 10px 15px;
     text-decoration: none;
+    transition: all 500ms;
+}
+
+.social ul li a:hover{
+    padding: 10px 30px;
+    background-color: black;
+    transition: all 500ms;
+    
 }
 
 .social ul li .icon-facebook {background:#3b5998;} /* Establecemos los colores de cada red social, aprovechando su class */
@@ -119,5 +137,14 @@ nav ul li a:before{
     border-right: 10px solid rgb(66,139,202);
     border-bottom: 10px solid rgb(202, 66, 129);
     border-left: 10px solid rgba(66,139,202,.2);
-
+    animation: rotar 800ms linear infinite ;
  }
+
+ @keyframes rotar {
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+    }
+}
